// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App.vue Cached data + jwt Full temnplate 1`] = `
<div
  id="main-container"
>
  <div
    id="header"
    class="development"
    user="[object Object]"
  >
    <div
      id="quickJobHeader"
    >
      <div
        id="quick-selector"
      >
        <!--  -->
      </div>
    </div>
    <div
      id="loggedIn"
    >
      <a
        href="#"
      >
        <div
          class="ui circular image thumbnail mini"
        >
          <svg
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
            xml:space="preserve"
            viewBox="0 0 500 500"
            style="shape-rendering: geometricPrecision; text-rendering: geometricPrecision; image-rendering: optimizeQuality; fill-rule: evenodd;"
          >
            <g>
              <circle
                cx="250"
                cy="250"
                r="245"
              />
              <text
                x="50%"
                y="50%"
                text-anchor="middle"
                dy="0em"
                font-size="250px"
                alignment-baseline="central"
                fill="white"
              >
                U
              </text>
            </g>
          </svg>
        </div>
        <strong>
          
        </strong>
      </a>
    </div>
    <div
      id="user_switcher"
    >
      <div>
        <div
          class="switcher"
        >
          <div
            class="universal-list ui floating top right pointing dropdown tiny positive button"
            tabindex="0"
          >
            <input
              type="hidden"
              name="dropdown"
            />
            <span
              class="text"
            >
              Switch
            </span>
            <div
              class="menu"
              tabindex="-1"
            >
              <div
                class="header-action"
              >
                <div>
                  <button
                    class="ui button tiny blue"
                  >
                    Logout
                  </button>
                </div>
              </div>
              <div
                class="header"
              >
                <div>
                  <div
                    class="ui circular image avatar"
                  >
                    <svg
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                      xml:space="preserve"
                      viewBox="0 0 500 500"
                      style="shape-rendering: geometricPrecision; text-rendering: geometricPrecision; image-rendering: optimizeQuality; fill-rule: evenodd;"
                    >
                      <g>
                        <circle
                          cx="250"
                          cy="250"
                          r="245"
                        />
                        <text
                          x="50%"
                          y="50%"
                          text-anchor="middle"
                          dy="0em"
                          font-size="250px"
                          alignment-baseline="central"
                          fill="white"
                        >
                          U
                        </text>
                      </g>
                    </svg>
                  </div>
                  <div
                    class="label"
                  >
                    
                  </div>
                </div>
                <div
                  class="item"
                >
                  Select an item
                </div>
              </div>
              <div
                class="divider"
              />
              <div
                class="ui icon transparent fluid search input"
              >
                <i
                  class="search icon"
                />
                <input
                  type="text"
                  placeholder="Search users..."
                />
              </div>
              <!--  -->
              <div
                class="divider"
              />
              <div
                class="scrolling menu"
              >
                <div
                  class="item"
                >
                  No items to display
                </div>
              </div>
              <div
                class="ui inverted dimmer"
              >
                <div
                  class="ui text loader large"
                >
                  Loading
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="wrapper"
    >
      <a
        href="/"
      >
        <h1
          id="logo"
        >
          Croud Control
        </h1>
      </a>
    </div>
  </div>
  <div
    class=""
    id="main-content"
  >
    <div
      id="main-navigation"
      class="main-navigation"
    >
      <div
        class="contained"
      >
        <!--  -->
      </div>
    </div>
    <div
      id="main-content-container"
    >
      <!--  -->
      <div
        id="main-content-body"
        class="flush-body without-heading"
      >
        <h1
          class="ui heading"
        >
          Test
        </h1>
      </div>
    </div>
  </div>
</div>
`;

exports[`App.vue Cached data + jwt custom layout 1`] = `
<div
  id="main-container"
>
  <!--  -->
  <div
    class=""
  >
    this is a test
  </div>
</div>
`;

exports[`App.vue Cached data + jwt empty template 1`] = `
<div
  id="main-container"
>
  <!--  -->
  <div
    class=""
    id="main-content"
  >
    <!--  -->
    <div
      id=""
    >
      <!--  -->
      <div
        id="main-content-body"
        class="flush-body without-heading"
      >
        <h1
          class="ui heading"
        >
          Test
        </h1>
      </div>
    </div>
  </div>
</div>
`;

exports[`App.vue should bounce to login page if no JWT exists 1`] = `
<div
  id="main-container"
>
  <!--  -->
  <div
    class="login-container"
  >
    <!--  -->
  </div>
</div>
`;

exports[`App.vue should carry on loading with jwt but no cached data 1`] = `
<div
  id="main-container"
>
  <!--  -->
  <div
    class="ui very padded basic center aligned loading-overlay segment"
  >
    <div>
      <img
        src="../static/img/croud_logo_new.svg"
        class="ui small image"
      />
    </div>
  </div>
</div>
`;
